derive/tests/compile-fail/multiple_payload.stderr
error: packet may not have multiple payloads
  --> $DIR/multiple_payload.rs:16:7
   |
16 |     #[payload]
   |       ^^^^^^^
